# Agent-Orchestrator-driven

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  Makefile  README.md  SECURITY.md  mcp-config.json  mkdocs.yml  pyproject.toml  setup.ps1  setup.sh
.agents/workflows/: add-connector.md  add-template.md  run-demo.md  run-tests.md  setup.md
.cline/: mcp_config.json
.github/workflows/: auto-triage.yml  ci.yml  generate-diagram.yml  incident-response.yml
benchmarks/: baseline_results.json  run_benchmarks.py  scenarios.json
connectors/: __init__.py  base.py  filesystem_connector.py  github_connector.py  http_connector.py  registry.py  slack_connector.py  sql_connector.py
docs/: QUICKSTART.md  agentic-runtime.md  architecture.md  architecture.py  benchmarks.md  connector-sdk.md  cookbook.md  faq.md  getting-started.md  github-actions.md  index.md  mcp-stdio.md
examples/: README.md  quickstart.py
examples/hello_agentic_workflow/: README.md  run.sh
examples/incident_triage/: README.md  sample_incident.json  workflow.py
runtime/: __init__.py  agent_registry.py  checkpoint.py  handoff.py  policy.py  retry.py
src/: llm_policy.py
src/antigravity/: __init__.py  adhoc.py  cli.py  dag_engine.py  handoff.py  mcp_stdio.py  mcp_tools.py  memory.py  memory_semantic.py  policy.py  workflow.py
src/antigravity_orchestrator/: __init__.py  cli.py  models.py
src/antigravity_orchestrator/connectors/: __init__.py
src/antigravity_orchestrator/core/: __init__.py  executor.py  planner.py  state_store.py  workflow.py
src/antigravity_orchestrator/observability/: __init__.py  logger.py  metrics.py  tracing.py
src/antigravity_orchestrator/runtime/: __init__.py  engine.py
templates/: bug-triage.md  content-ops.md  customer-support.md  gallery.py  incident-response.md  incident-response.yaml  lead-enrichment.md
tests/: test_adhoc.py  test_dag_engine.py  test_fixed_orchestrator.py  test_handoff.py  test_llm_policy.py  test_mcp_stdio.py  test_memory.py  test_memory_semantic.py  test_policy.py
tests/connectors/: test_github_connector.py  test_registry.py  test_sql_connector.py
tests/core/: test_workflow_graph.py
tests/runtime/: test_retry_policy.py
