[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antigravity"
version = "1.0.0"
description = "Agent Orchestrator-driven: a production-ready multi-agent workflow framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
keywords = ["agent", "orchestrator", "llm", "workflow", "automation"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = []

[project.scripts]
antigravity = "antigravity_orchestrator.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov",
  "ruff",
  "mypy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
addopts = "-q --cov=src/antigravity --cov=src/antigravity_orchestrator --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
mypy_path = "src"
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
